--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -16,7 +16,10 @@
   @media all and (min-width: 768px) {
     padding-top: 170px;
   }
-  @media all and (min-width: 1200px) {
+  @media all and (min-width: 1366px) {
+    padding-top: 80px;
+  }
+  @media all and (min-width: 1920px) {
     padding-top: 100px;
   }
 }
@@ -28,7 +31,10 @@
   @media all and (min-width: 768px) {
     font-size: 50px;
   }
-  @media all and (min-width: 1200px) {
+  @media all and (min-width: 1366px) {
+    font-size: 35px;
+  }
+  @media all and (min-width: 1920px) {
     font-size: 43px;
   }
   &--sub {
@@ -41,7 +47,11 @@
       font-size: 38px;
       margin-bottom: 70px;
     }
-    @media all and (min-width: 1200px) {
+    @media all and (min-width: 1366px) {
+      font-size: 28px;
+      padding-bottom: 22px;
+    }
+    @media all and (min-width: 1920px) {
       font-size: 35px;
     }
   }
@@ -73,7 +83,11 @@
       @media all and (min-width: 768px) {
         font-size: 150px;
       }
-      @media all and (min-width: 1200px) {
+      @media all and (min-width: 1366px) {
+        font-size: 80px;
+        margin: 0 80px 0 80px;
+      }
+      @media all and (min-width: 1920px) {
         font-size: 110px;
         margin: 0 90px 0 90px;
       }
@@ -121,7 +135,11 @@
         top: -100px;
         font-size: 150px;
       }
-      @media all and (min-width: 1200px) {
+      @media all and (min-width: 1366px) {
+        font-size: 80px;
+        margin: 0 80px 0 80px;
+      }
+      @media all and (min-width: 1920px) {
         font-size: 110px;
         margin: 0 90px 0 90px;
       }
@@ -176,7 +194,10 @@
         width: 142px;
         //text-overflow: ;
       }
-      @media all and (min-width: 1200px) {
+      @media all and (min-width: 1366px) {
+        //font-size: 16px;
+      }
+      @media all and (min-width: 1920px) {
         top: 0;
         left: 29px;
       }
@@ -185,7 +206,10 @@
         @media all and (min-width: 768px) {
           //margin: 0 0 5px 6px;
         }
-        @media all and (min-width: 1200px) {
+        @media all and (min-width: 1366px) {
+          font-size: 16px;
+        }
+        @media all and (min-width: 1920px) {
           font-size: 18px;
         }
       }
@@ -269,7 +293,10 @@
   @media all and (min-width: 768px) {
     font-size: 50px;
   }
-  @media all and (min-width: 1200px) {
+  @media all and (min-width: 1366px) {
+    font-size: 38px;
+  }
+  @media all and (min-width: 1920px) {
     font-size: 50px;
     margin-bottom: 35px;
   }
@@ -290,8 +317,11 @@
       font-size: 150px;
       margin-left: 7px;
     }
-    @media all and (min-width: 1200px) {
-      font-size: 110px;
+    @media all and (min-width: 1366px) {
+      font-size: 80px;
+    }
+    @media all and (min-width: 1920px) {
+      font-size: 150px;
     }
     &__text {
       font-family: "Kiwi Maru", serif;
