Fixed responsive 1366 in home page

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,6 +10,12 @@
   @media all and (min-width: 768px) {
     padding: 22px;
   }
+  @media all and (min-width: 1366px) {
+    padding: 18px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
   @media all and (min-width: 1920px) {
     position: absolute;
     bottom: 0;
@@ -31,7 +37,11 @@
         font-size: 45px;
         padding: 0 17px 10px 17px;
       }
-      @media all and (min-width: 1200px) {
+      @media all and (min-width: 1366px) {
+        font-size: 27px;
+        padding: 0 12px 10px 12px;
+      }
+      @media all and (min-width: 1920px) {
         font-size: 33px;
       }
     }
@@ -43,7 +53,11 @@
     @media all and (min-width: 768px) {
       font-size: 20px;
     }
-    @media all and (min-width: 1200px) {
+    @media all and (min-width: 1366px) {
+      font-size: 13px;
+      padding: 0 12px 5px 12px;
+    }
+    @media all and (min-width: 1920px) {
       font-size: 16px;
     }
   }
