--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -74,7 +74,7 @@
     position: relative;
     text-align: center;
     &__down {
-      font-family: "Times New Roman", Times, serif;
+      //font-family: "Times New Roman", Times, serif;
       font-size: 100px;
       color: white;
       -webkit-transform: rotate(90deg);
@@ -95,7 +95,7 @@
     &__up {
       position: absolute;
       top: -60px;
-      font-family: "Times New Roman", Times, serif;
+      //font-family: "Times New Roman", Times, serif;
       font-size: 100px;
       color: white;
       -webkit-transform: rotate(90deg);
@@ -136,10 +136,12 @@
         font-size: 150px;
       }
       @media all and (min-width: 1366px) {
+        top: -70px;
         font-size: 80px;
         margin: 0 80px 0 80px;
       }
       @media all and (min-width: 1920px) {
+        top: -100px;
         font-size: 110px;
         margin: 0 90px 0 90px;
       }
@@ -195,7 +197,8 @@
         //text-overflow: ;
       }
       @media all and (min-width: 1366px) {
-        //font-size: 16px;
+        top: -5px;
+        left: 14px;
       }
       @media all and (min-width: 1920px) {
         top: 0;
@@ -207,7 +210,7 @@
           //margin: 0 0 5px 6px;
         }
         @media all and (min-width: 1366px) {
-          font-size: 16px;
+          font-size: 14px;
         }
         @media all and (min-width: 1920px) {
           font-size: 18px;
@@ -305,10 +308,10 @@
   position: relative;
   text-align: center;
   .mouth {
-    font-family: "Times New Roman", Times, serif;
+    //font-family: "Times New Roman", Times, serif;
     font-size: 100px;
     color: white;
-    top: 20px;
+    //top: 20px;
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     display: inline-block;
@@ -318,7 +321,7 @@
       margin-left: 7px;
     }
     @media all and (min-width: 1366px) {
-      font-size: 80px;
+      font-size: 106px;
     }
     @media all and (min-width: 1920px) {
       font-size: 150px;
@@ -366,16 +369,22 @@
         }
       }
       @media all and (min-width: 768px) {
-        font-size: 20px;
+        //font-size: 20px;
       }
-      @media all and (min-width: 1200px) {
-        top: 0;
+      @media all and (min-width: 1366px) {
+        //top: -10px;
+      }
+      @media all and (min-width: 1920px) {
+        top: 10px;
       }
       &--link {
         @media all and (min-width: 768px) {
           //font-size: 20px;
         }
-        @media all and (min-width: 1200px) {
+        @media all and (min-width: 1366px) {
+          font-size: 14px;
+        }
+        @media all and (min-width: 1920px) {
           font-size: 18px;
         }
       }
